@@ -6,6 +6,7 @@ import java.io.IOException;
 import java.io.PrintWriter;
 import java.util.Arrays;
 import java.util.Dictionary;
+import java.util.HashMap;
 import java.util.Vector;
 
 import javax.servlet.ServletException;
@@ -169,7 +170,7 @@ public class DataTypeListerServlet extends DataServlet {
                 if (oqlQuery instanceof org.makumba.db.makumba.sql.Query) {
                     writer.println("<hr>");
                     org.makumba.db.makumba.sql.Query sqlQuery = (org.makumba.db.makumba.sql.Query) ((DBConnection) t).getQuery(query);
-                    writer.println("SQL query: " + sqlQuery.getCommand() + ";<br>");
+                    writer.println("SQL query: " + sqlQuery.getCommand(new HashMap<String, Object>()) + ";<br>");
                 }
 
             } finally {
